# freelancer-data-stack

./: .editorconfig  .env  .env.example  .env.template  .envrc  .gitignore  .pre-commit-config.yaml  CLAUDE.md  COMPLETED_TASKS.md  Dockerfile.agents  IDEAS.md  INITIAL.md  LICENSE  MIGRATION_STATUS.md  Makefile  OUTSTANDING_TASKS.md  PIPELINE_TESTING_PLAN.md  PLANNING.md  README.md  TASK.md  TASKS.md  VERSION_MATRIX.md  dependency_audit.md  docker-compose-test.yml  docker-compose.agents.yml  docker-compose.mcp.yml  docker-compose.yml  feature-mcp-server-integration.md  pyproject.toml  requirements-airflow.txt  requirements-datahub.txt  requirements-dev.txt  requirements-jupyter.txt  requirements-meltano.txt  requirements-server.txt  requirements-viz.txt  requirements.txt  setup.sh  test_implementation.py  transactions.csv
.claude/commands/: ai-agent-task.md  create-planning-parallel.md  create-pr.md  data-stack-help.md  deploy-data-stack.md  monitor-data-stack.md  optimize-costs.md  prp-task-execute.md  prp-task-execute.md.backup  run-data-pipeline.md  scale-data-stack.md  troubleshoot-stack.md  validate-pipeline.md
.devcontainer/: devcontainer.json
.github/workflows/: build-push.yml  deploy-app.yml  deploy-infra.yml  deploy.yml.example  e2e-pipeline-test.yml  lint-test.yml  rule-of-three-check.yml
.warp/: HOW_TO_ADD_TO_WARP.md  IMPLEMENTATION_SUMMARY.md  IMPORT_MECHANISM.md  MIGRATION_TO_NATIVE.md  README.md  agent_functions.sh  agent_rules.yaml  import_workflows.py  prp_workflow_template.yaml  prp_workflows_json.json  setup.sh  snippets.yaml  workflow_categories.yaml  workflows_for_import.json
.warp/.warp/: README_PRP_WORKFLOWS.md
.warp/macros/: agent_sessions.yaml
.warp/memory/: README.md  agent_integration.py  memory_cli.py  memory_manager.py  schema.sql
.warp/snippets/: llm-prompts.yaml  mcp-commands.yaml
.warp/templates/: dev_commands.yaml
.warp/workflows/: agent_pr_loop.yaml  agent_test_suite.json  agent_test_suite.yaml  airbyte-sync.yaml  airflow-cli.yaml  airflow-ui.yaml  api-contract-define.yaml  check-stack-status.yaml  dagster-ui.yaml  db-query.yaml  dbt-comprehensive.yaml  dbt-run-models.yaml  dev_environment.yaml  meltano-run.yaml  prp-base-create.yaml  prp-base-execute.yaml  prp-planning-create.yaml  start-data-stack.yaml  stop-data-stack.yaml  task-list-init.yaml  view-stack-logs.yaml
PRPs/: INTEGRATION_GUIDE.md  PRP_WORKFLOW.md  ai-agent-driven-data-stack-implementation-parallel.md  claude-md-data-stack-enhancement.md  comprehensive-mcp-server-integration.md  docker-compose-credentials-migration.md  enhance-claude-prp-agentic-eng-integration.md  mcp-integration-execution-plan.md  modernized-data-stack-with-ai-agents.md  poetry-to-uv-migration.md  resolve-untracked-tracked-changes.md
PRPs/ai_docs/: claude-prp-best-practices.md  prp-agentic-eng-integration.md  security-considerations.md
PRPs/completed/: feature-enhance-claude-prp.md
PRPs/scripts/: data_stack_prp_helper.py  prp_runner.py
PRPs/templates/: prp-planning.md  prp-validate.md
agents/: __init__.py  analytics_engineer.py  base_agent.py  data_analyst.py  data_engineer.py  data_platform_engineer.py  data_scientist.py  data_stack_engineer.py  orchestrator.py
api/: __init__.py  main.py
backups/docker_compose_backup_20250707_214014/: .gitignore  backup_metadata.json  docker-compose.yml  rollback.sh
backups/post_migration_20250708_202511/: backup_metadata.json  pip_packages.txt  pyproject.toml  requirements-dev.txt  requirements.txt  restore.sh  uv_packages.txt
backups/pre_migration_20250708_201043/: backup_metadata.json  poetry_packages.txt  pyproject.toml  restore.sh
catalog/datahub/: dagster_ingestion.yml
config/: __init__.py  agent_configs.py  model_configs.py  tool_configs.py
dags/: .envrc  example_data_pipeline.py
data-stack-plans/: ai-agent-driven-data-stack-architecture-plan.md
data_stack/dbt/: dbt_project.yml  packages.yml
data_stack/meltano/: meltano.yml
docs/: CONTEXT_ENGINEERING_PLAN.md  agent_overlap_matrix.md  branch-report.md  mcp-server-executive-summary.md  mcp-server-implementation-guide.md  mcp-server-research.md  poetry-to-uv-migration-validation-strategy.md  python-environment.md
docs/development/: PR_REVIEW.md  TESTING.md
docs/planning/: AI_AGENT_IMPROVEMENTS.md
docs/reports/: claude_md_enhancement_report.md  command_merge_report.md  comprehensive_validation_report.md  documentation_update_report.md  example-from-workshop-mcp-crawl4ai-refactor-1.md  integration_report.md  (+2 more)
documents/: project-guidelines.md
examples/: README.md  basic_agent_usage.py  data_pipeline_setup.py  multi_agent_workflow.py
infra/: README.md
interface/: __init__.py  prompt_handler.py  response_formatter.py  workflow_executor.py
mcp-server/: .env.example  Dockerfile  adapters.py  config.py  llm_gateway.py  main.py  requirements.txt  schema.py  terraform-outputs.tf  websocket_manager.py
meltano/: meltano.yml
monitoring/: alert_rules.yml  prometheus.yml
notebooks/: app.py
orchestration/: __init__.py
prompts/: README.md  template.md
scripts/: backup_current_config.py  backup_current_prp_system.py  create_comprehensive_validation.py  deploy-with-env.sh  deploy.sh  deploy_stack.py  e2e_pipeline_test.py  enhance_claude_md.py  enhance_prp_templates.py  extract_prp_components.py  generate_env_passwords.py  init-multiple-databases.sh  integrate_prp_utilities.py  merge_commands.py  milestone_automation.sh  setup-observability.sh  test_datahub_integration.sh  update-requirements.sh  update_documentation.py  uv_health_check.py  uv_migration_backup.py  uv_migration_validator.py  validate_credentials.py  validate_pipeline.py
testing/: mcp_testing_framework.py
tests/: __init__.py  test_agents.py  test_configuration.py  test_data_stack_engineer.py  test_duckdb_tools.py  test_interface.py  test_meltano_tools.py
tools/: README.md  __init__.py  airflow_tools.py  check_duplicates.sh  datahub_tools.py  dbt_tools.py  docker_tools.py  duckdb_tools.py  meltano_tools.py  quality_tools.py  rule_of_three_checker.py  rule_of_three_config.yaml
viz/: README.md
(+220 files in other folders)
